tests/baselines/reference/parserVariableDeclaration8.errors.txt
parserVariableDeclaration8.ts(1,4): error TS1123: Variable declaration list cannot be empty.


==== parserVariableDeclaration8.ts (1 errors) ====
    var ;
       
!!! error TS1123: Variable declaration list cannot be empty.